--- a/prog_assign_1.ipynb
+++ b/prog_assign_1.ipynb
@@ -19,10 +19,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sanjana Baswapuram\n",
+      "division of two numbers 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Sanjana Baswapuram\")\n",
+    "\n",
+    "x = 15\n",
+    "y = 3\n",
+    "a=x/y\n",
+    "print('division of two numbers',a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,10 +49,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 1 is 1\n",
+      "The factorial of 2 is 2\n",
+      "The factorial of 3 is 6\n",
+      "The factorial of 4 is 24\n",
+      "The factorial of 5 is 120\n",
+      "The factorial of 6 is 720\n",
+      "The factorial of 7 is 5040\n",
+      "The factorial of 8 is 40320\n",
+      "The factorial of 9 is 362880\n",
+      "The factorial of 10 is 3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "prev_fact = 1\n",
+    "    \n",
+    "for each in range(1,11):\n",
+    "     \n",
+    "     prev_fact = prev_fact*each\n",
+    "     print(\"The factorial of\",each,\"is \",end='')\n",
+    "     print(prev_fact)\n",
+    "     "
+   ]
   },
   {
    "cell_type": "markdown",
