--- a/S534595.ipynb
+++ b/S534595.ipynb
@@ -11,33 +11,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#      #\n",
-      "##    ##\n",
-      "###  ###\n",
+      "#   #   \n",
+      "##  ##  \n",
+      "### ### \n",
       "########\n"
      ]
     }
    ],
    "source": [
-    "x = 4\n",
-    "lines = 1\n",
-    "while lines < x+1:\n",
-    "    for a in range(0,lines):\n",
-    "        print('#',end = '')\n",
-    "    space = (x*2)-(2*lines)\n",
-    "    for space  in range(0,space):\n",
-    "        print(' ',end = '')\n",
-    "    for b in range(0,lines):\n",
-    "        print('#', end = '')\n",
-    "    print()\n",
-    "    lines += 1"
+    "start = 0\n",
+    "end = 4\n",
+    "\n",
+    "for row in range(4):\n",
+    "    string = '#'*(row+1)\n",
+    "    string += ' '*(end-row-1)\n",
+    "    string += '#'*(row+1)\n",
+    "    string += ' '*(7-(end+row))\n",
+    "    print(string)\n"
    ]
   },
   {
